--- a/src/scss/layouts/header.scss
+++ b/src/scss/layouts/header.scss
@@ -1,12 +1,24 @@
 .e-header {
   display: block;
+  width: 100%;
+  background: $cor-preto;
+  position: fixed;
+  padding: 30px 0;
   &__list {
     @include flex;
+    width: 50%;
+    float: right;
     &__item {
       position: relative;
+      margin-right: 20px;
+      &:last-child{
+        margin-right: 30px;
+      }
       span {
-        font-size: 20px; 
-      } 
+        font-size: 24px;
+        color: $cor-branco;
+        cursor: pointer;
+      }
     }
   }
 }
