--- a/src/scss/variaveis/variaveis.scss
+++ b/src/scss/variaveis/variaveis.scss
@@ -1,2 +1,7 @@
-$cor-padrao: #000;
-$cor-auxiliar: #d2d2d2;
+$cor-padrao: #4169E1;
+$cor-auxiliar: #f2f2f2;
+
+$cor-branco: #fff;
+$cor-preto: #242424;
+
+$font-padrao: 'Open Sans', sans-serif;
