--- a/src/scss/geral.scss
+++ b/src/scss/geral.scss
@@ -3,8 +3,14 @@
 @import 'variaveis/variaveis';
 
 @import 'layouts/header';
+@import 'layouts/tecnology';
 @import 'layouts/footer';
 
 body {
     font-family: $font-padrao;
+    overflow-x: hidden;
+}
+
+main {
+    padding-top: 100px;
 }
