--- a/src/scss/variaveis/variaveis.scss
+++ b/src/scss/variaveis/variaveis.scss
@@ -1,5 +1,5 @@
-$cor-padrao: #4169E1;
-$cor-auxiliar: #f2f2f2;
+$cor-padrao: #1889ec;
+$cor-auxiliar: #696969;
 
 $cor-branco: #fff;
 $cor-preto: #242424;
