--- a/src/scss/layouts/header.scss
+++ b/src/scss/layouts/header.scss
@@ -14,7 +14,7 @@
       &:last-child {
         margin-right: 30px;
       }
-      span {
+      &__title {
         font-size: 24px;
         color: $cor-branco;
         cursor: pointer;
