--- a/src/css/geral.css
+++ b/src/css/geral.css
@@ -153,10 +153,102 @@ li {
       margin-right: 20px; }
       .e-header__list__item:last-child {
         margin-right: 30px; }
-      .e-header__list__item span {
+      .e-header__list__item__title {
         font-size: 24px;
         color: #fff;
         cursor: pointer; }
+
+.e-about__content {
+  padding: 2% 5%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #242424; }
+  .e-about__content__left {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    font-size: 24px;
+    color: #1889ec;
+    font-weight: 900;
+    line-height: 36px; }
+    .e-about__content__left img {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      margin-bottom: 20px; }
+    .e-about__content__left p {
+      color: #fff;
+      font-weight: 500; }
+  .e-about__content__right {
+    width: 50%;
+    min-height: 300px; }
+    .e-about__content__right > span {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      justify-content: center;
+      color: #1889ec;
+      text-transform: uppercase;
+      font-weight: 900;
+      margin-bottom: 30px;
+      font-size: 24px; }
+    .e-about__content__right p {
+      color: #fff;
+      line-height: 20px;
+      font-size: 18px;
+      padding: 0 5%; }
+      .e-about__content__right p a {
+        text-decoration: none;
+        color: #1889ec;
+        font-weight: 900; }
+      .e-about__content__right p span {
+        font-weight: 900;
+        color: #1889ec; }
+
+.e-projects__content {
+  margin: 50px 5%; }
+  .e-projects__content > p {
+    color: #1889ec;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 900;
+    margin: 60px 0;
+    font-size: 24px; }
+  .e-projects__content__list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+    .e-projects__content__list__item {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      justify-content: center;
+      flex-direction: column;
+      max-width: 250px;
+      min-height: 250px; }
+      .e-projects__content__list__item:not(:last-child) {
+        margin-right: 20px; }
+      .e-projects__content__list__item strong {
+        font-weight: 900;
+        color: #696969;
+        margin: 20px 0;
+        text-transform: uppercase;
+        font-size: 20px; }
+      .e-projects__content__list__item p {
+        text-align: center;
+        color: #696969;
+        line-height: 20px;
+        margin-bottom: 20px;
+        font-size: 14px; }
+      .e-projects__content__list__item a {
+        text-decoration: none;
+        color: #fff;
+        background: #242424;
+        padding: 10px 40px;
+        border-radius: 5px; }
 
 .e-tecnology__content {
   margin: 50px 5%; }
@@ -165,7 +257,8 @@ li {
     text-transform: uppercase;
     text-align: center;
     font-weight: 900;
-    margin: 20px 0; }
+    margin: 60px 0;
+    font-size: 24px; }
   .e-tecnology__content__list {
     display: flex;
     align-items: center;
@@ -175,7 +268,7 @@ li {
       align-items: center;
       justify-content: space-between;
       flex-direction: column;
-      width: 16.66%; }
+      width: 14%; }
       .e-tecnology__content__list__item:not(:last-child) {
         margin-right: 20px; }
       .e-tecnology__content__list__item__title {
@@ -185,7 +278,11 @@ li {
       .e-tecnology__content__list__item p {
         text-align: center;
         color: #696969;
-        min-height: 100px; }
+        min-height: 120px;
+        line-height: 20px;
+        font-size: 14px; }
+        .e-tecnology__content__list__item p strong {
+          font-weight: 900; }
 
 .e-footer {
   background: #242424;
@@ -204,6 +301,4 @@ body {
   overflow-x: hidden; }
 
 main {
-  padding-top: 100px; }
-
-/*# sourceMappingURL=geral.css.map */
+  padding-top: 84px; }
