--- a/src/scss/layouts/tecnology.scss
+++ b/src/scss/layouts/tecnology.scss
@@ -6,14 +6,15 @@
       text-transform: uppercase;
       text-align: center;
       font-weight: 900;
-      margin: 20px 0;
+      margin: 60px 0;
+      font-size: 24px;
     }
     &__list {
       @include flex;
       &__item {
         @include flex;
         flex-direction: column;
-        width: 16.66%;
+        width: 14%;
         &:not(:last-child){
             margin-right: 20px;
         }
@@ -25,7 +26,12 @@
         p{
             text-align: center;
             color: $cor-auxiliar;
-            min-height: 100px;
+            min-height: 120px;
+            line-height: 20px;
+            font-size: 14px;
+            strong{
+              font-weight: 900;
+            }
         }
       }
     }
