--- a/src/scss/variaveis/variaveis.scss
+++ b/src/scss/variaveis/variaveis.scss
@@ -1,7 +1,9 @@
-$cor-padrao: #1889ec;
+$cor-padrao: #2088e4;
 $cor-auxiliar: #696969;
 
 $cor-branco: #fff;
-$cor-preto: #242424;
+$cor-preto: #303030;
 
 $font-padrao: 'Open Sans', sans-serif;
+
+$mobile: "(max-width: 767px)";
