--- a/src/scss/layouts/footer.scss
+++ b/src/scss/layouts/footer.scss
@@ -1,14 +1,32 @@
 .e-footer {
   background: $cor-preto;
   padding: 20px 0;
+  float: left;
+  position: relative;
+  width: 100%;
   &__content {
     width: 100%;
     text-align: center;
+    font-size: 14px;
     p {
       margin: 10px 0;
       color: #fff;
       &:first-child {
         color: $cor-padrao;
+      }
+    }
+    &__social{
+      @include flex;
+      justify-content: center;
+      li {
+        &:not(:last-child){
+          margin-right: 30px;
+        }
+        svg {
+          filter: invert(1);
+          width: 25px;
+          height: 25px;
+        }
       }
     }
   }
