--- a/src/scss/layouts/projects.scss
+++ b/src/scss/layouts/projects.scss
@@ -1,31 +1,83 @@
 .e-projects {
   &__content {
-    margin: 50px 5%;
+    margin: 5% 0;
+    width: 100%;
+    float: left;
+    position: relative;
     > p {
       color: $cor-padrao;
       text-transform: uppercase;
       text-align: center;
       font-weight: 900;
-      margin: 60px 0;
+      margin-bottom: 3%;
       font-size: 24px;
+      @media #{$mobile}{
+        margin-bottom: 10%;
+        font-size: 20px;
+      }
     }
     &__list {
       @include flex;
+      width: 100%;
+      float: left;
+      position: relative;
+      .slick-arrow {
+        font-size: 0;
+        cursor: pointer;
+        &.slick-prev {
+          &::after {
+            content: "";
+            position: absolute;
+            background: url("../../imagens/arrow.png") no-repeat;
+            width: 36px;
+            height: 36px;
+            text-align: center;
+          }
+        }
+        &.slick-next {
+          &::after {
+            content: "";
+            position: absolute;
+            background: url("../../imagens/arrow.png") no-repeat;
+            width: 36px;
+            height: 36px;
+            right: 10px;
+            transform: rotate(180deg);
+            text-align: center;
+          }
+        }
+      }
+      .slick-list {
+        margin: 0;
+        padding: 0;
+        width: 95%;
+        float: left;
+        overflow: hidden;
+        position: relative;
+        display: flex;
+        .slick-track {
+          position: relative;
+          display: flex;
+          top: 0;
+          left: 0;
+        }
+      }
       &__item {
-        @include flex;
+        align-items: center;
         justify-content: center;
         flex-direction: column;
-        max-width: 250px;
-        min-height: 250px;
-        &:not(:last-child) {
-          margin-right: 20px;
-        }
+        padding: 0;
+        position: relative;
+        display: flex;
+        float: left;
+        height: 100%;
+        min-height: 1px;
         strong {
-            font-weight: 900;
-            color: $cor-auxiliar;
-            margin: 20px 0;
-            text-transform: uppercase;
-            font-size: 20px;
+          font-weight: 900;
+          color: $cor-auxiliar;
+          margin: 20px 0;
+          text-transform: uppercase;
+          font-size: 20px;
         }
         p {
           text-align: center;
@@ -34,12 +86,12 @@
           margin-bottom: 20px;
           font-size: 14px;
         }
-        a{
-            text-decoration: none;
-            color: #fff;
-            background: $cor-preto;
-            padding: 10px 40px;
-            border-radius: 5px;
+        a {
+          text-decoration: none;
+          color: #fff;
+          background: $cor-preto;
+          padding: 10px 40px;
+          border-radius: 5px;
         }
       }
     }
