--- a/src/css/geral.css
+++ b/src/css/geral.css
@@ -476,6 +476,18 @@ li {
     width: 100%;
     text-align: center;
     font-size: 14px; }
+    .e-footer__content a {
+      text-decoration: none;
+      cursor: pointer;
+      color: #fff;
+      line-height: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      justify-content: center; }
+      .e-footer__content a svg {
+        margin: 0 5px;
+        filter: invert(1); }
     .e-footer__content p {
       margin: 10px 0;
       color: #fff; }
@@ -485,11 +497,11 @@ li {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      justify-content: center; }
+      justify-content: center;
+      margin: 10px 0; }
       .e-footer__content__social li:not(:last-child) {
         margin-right: 30px; }
       .e-footer__content__social li svg {
-        filter: invert(1);
         width: 25px;
         height: 25px; }
 
