--- a/src/scss/layouts/footer.scss
+++ b/src/scss/layouts/footer.scss
@@ -8,6 +8,18 @@
     width: 100%;
     text-align: center;
     font-size: 14px;
+    a{
+      text-decoration: none;
+      cursor: pointer;
+      color: #fff;
+      line-height: 24px;
+      @include flex;
+      justify-content: center;
+      svg{
+        margin: 0 5px;
+        filter: invert(1);
+      }
+    }
     p {
       margin: 10px 0;
       color: #fff;
@@ -18,12 +30,12 @@
     &__social{
       @include flex;
       justify-content: center;
+      margin: 10px 0;
       li {
         &:not(:last-child){
           margin-right: 30px;
         }
         svg {
-          filter: invert(1);
           width: 25px;
           height: 25px;
         }
