--- a/src/scss/layouts/footer.scss
+++ b/src/scss/layouts/footer.scss
@@ -11,7 +11,7 @@
     a{
       text-decoration: none;
       cursor: pointer;
-      color: #fff;
+      color: $cor-branco;
       line-height: 24px;
       @include flex;
       justify-content: center;
@@ -22,7 +22,8 @@
     }
     p {
       margin: 10px 0;
-      color: #fff;
+      color: $cor-branco;
+      line-height: 24px;
       &:first-child {
         color: $cor-padrao;
       }
