--- a/src/css/geral.css
+++ b/src/css/geral.css
@@ -326,19 +326,25 @@ li {
       .e-projects__content__list .slick-arrow.slick-prev::after {
         content: "";
         position: absolute;
-        background: url("../imagens/arrow.png") no-repeat;
-        width: 36px;
-        height: 36px;
-        text-align: center; }
+        width: 25px;
+        height: 25px;
+        left: 10px;
+        transform: rotate(-45deg);
+        text-align: center;
+        margin-left: 5px;
+        border-left: 1px solid #696969;
+        border-top: 1px solid #696969; }
       .e-projects__content__list .slick-arrow.slick-next::after {
         content: "";
         position: absolute;
-        background: url("../imagens/arrow.png") no-repeat;
-        width: 36px;
-        height: 36px;
+        width: 25px;
+        height: 25px;
         right: 10px;
-        transform: rotate(180deg);
-        text-align: center; }
+        transform: rotate(45deg);
+        text-align: center;
+        margin-right: 5px;
+        border-right: 1px solid #696969;
+        border-top: 1px solid #696969; }
     .e-projects__content__list .slick-list {
       margin: 0;
       padding: 0;
@@ -347,6 +353,9 @@ li {
       overflow: hidden;
       position: relative;
       display: flex; }
+      @media (max-width: 767px) {
+        .e-projects__content__list .slick-list {
+          width: 80%; } }
       .e-projects__content__list .slick-list .slick-track {
         position: relative;
         display: flex;
@@ -412,19 +421,25 @@ li {
       .e-tecnology__content__list .slick-arrow.slick-prev::after {
         content: "";
         position: absolute;
-        background: url("../imagens/arrow.png") no-repeat;
-        width: 36px;
-        height: 36px;
-        text-align: center; }
+        width: 25px;
+        height: 25px;
+        left: 10px;
+        transform: rotate(-45deg);
+        text-align: center;
+        margin-left: 5px;
+        border-left: 1px solid #696969;
+        border-top: 1px solid #696969; }
       .e-tecnology__content__list .slick-arrow.slick-next::after {
         content: "";
         position: absolute;
-        background: url("../imagens/arrow.png") no-repeat;
-        width: 36px;
-        height: 36px;
+        width: 25px;
+        height: 25px;
         right: 10px;
-        transform: rotate(180deg);
-        text-align: center; }
+        transform: rotate(45deg);
+        text-align: center;
+        margin-right: 5px;
+        border-right: 1px solid #696969;
+        border-top: 1px solid #696969; }
     .e-tecnology__content__list .slick-list {
       width: 95%;
       float: left;
